// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all exports 1`] = `
Object {
  "authDictionary": Object {
    "sshKey": "SSH Key",
    "usernamePassword": "Username and Password",
  },
  "default": Object {
    "canceled": "Canceled",
    "completed": "Completed",
    "created": "Created",
    "failed": "Failed",
    "network": "Network",
    "paused": "Paused",
    "pending": "Pending",
    "running": "Running",
    "satellite": "Satellite",
    "sshKey": "SSH Key",
    "success": "Successful",
    "usernamePassword": "Username and Password",
    "vcenter": "VCenter",
  },
  "dictionary": Object {
    "canceled": "Canceled",
    "completed": "Completed",
    "created": "Created",
    "failed": "Failed",
    "network": "Network",
    "paused": "Paused",
    "pending": "Pending",
    "running": "Running",
    "satellite": "Satellite",
    "sshKey": "SSH Key",
    "success": "Successful",
    "usernamePassword": "Username and Password",
    "vcenter": "VCenter",
  },
  "scanStatusDictionary": Object {
    "canceled": "Canceled",
    "completed": "Completed",
    "created": "Created",
    "failed": "Failed",
    "paused": "Paused",
    "pending": "Pending",
    "running": "Running",
    "success": "Successful",
  },
  "srcDictionary": Object {
    "network": "Network",
    "satellite": "Satellite",
    "vcenter": "VCenter",
  },
}
`;

exports[`default export 1`] = `
Object {
  "canceled": "Canceled",
  "completed": "Completed",
  "created": "Created",
  "failed": "Failed",
  "network": "Network",
  "paused": "Paused",
  "pending": "Pending",
  "running": "Running",
  "satellite": "Satellite",
  "sshKey": "SSH Key",
  "success": "Successful",
  "usernamePassword": "Username and Password",
  "vcenter": "VCenter",
}
`;
